--- a/first/first.html
+++ b/first/first.html
@@ -8,7 +8,16 @@
     <title>First | GitHub Page</title>
 </head>
 <body>
-
+    <header>
+        <nav class="navbar">
+            <a href="#Home" class="navItem">Home</a>
+            <a href="#About" class="navItem">About</a>
+            <a href="#Skills" class="navItem">Skills</a>
+            <a href="#Projects" class="navItem">Projects</a>
+            <a href="#Contact" class="navItem">Contact</a>
+            <a href="#Resume" class="navItem">Resume</a>
+        </nav>
+    </header>
 </body>
 
 </html>
