Created responsive navbar
If the width of the screen is 700 pixels or less, an icon will be appeared on the navbar then you can click on it and a side menu would be appear from left to right with 0.4 sec transition.

--- a/first/first.html
+++ b/first/first.html
@@ -10,14 +10,29 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="#Home" class="navItem">Home</a>
-            <a href="#About" class="navItem">About</a>
-            <a href="#Skills" class="navItem">Skills</a>
-            <a href="#Projects" class="navItem">Projects</a>
-            <a href="#Contact" class="navItem">Contact</a>
-            <a href="#Resume" class="navItem">Resume</a>
+            <a href="#Home" class="navItems">Home</a>
+            <a href="#About" class="navItems">About</a>
+            <a href="#Skills" class="navItems">Skills</a>
+            <a href="#Projects" class="navItems">Projects</a>
+            <a href="#Contact" class="navItems">Contact</a>
+            <a href="#Resume" class="navItems">Resume</a>
+            <label for="check">
+                <input type="checkbox" id="check"/> 
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
         </nav>
+        <div class="sideMenu">
+            <a href="#Home" class="sideMenuItems">Home</a>
+            <a href="#About" class="sideMenuItems">About</a>
+            <a href="#Skills" class="sideMenuItems">Skills</a>
+            <a href="#Projects" class="sideMenuItems">Projects</a>
+            <a href="#Contact" class="sideMenuItems">Contact</a>
+            <a href="#Resume" class="sideMenuItems">Resume</a>
+        </div>
     </header>
+    <script src="first.js"></script>
 </body>
 
 </html>
