Added 'Home' and 'About' pages, fixed bug.

--- a/first/first.html
+++ b/first/first.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>First | GitHub Page</title>
 </head>
 <body>
@@ -16,7 +17,10 @@
             <a href="#Projects" class="navItems">Projects</a>
             <a href="#Contact" class="navItems">Contact</a>
             <a href="#Resume" class="navItems">Resume</a>
-            <label for="check">
+            <a href="https://github.com/salehghari" class="fab fa-github"></a>
+            <a href="https://www.instagram.com/salehghari/" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-youtube"></a>
+            <label id="label" for="check">
                 <input type="checkbox" id="check"/> 
                 <span></span>
                 <span></span>
@@ -32,6 +36,17 @@
             <a href="#Resume" class="sideMenuItems">Resume</a>
         </div>
     </header>
+    <div class="home">
+        <img id="myPic" src="media/my-picture.png" alt="My Picture">
+        <div class="homeText">
+            <h1 id="myName">Saleh Ghari</h1>
+            <h2 id="myProfession">Web Developer</h2>
+        </div>
+    </div>
+    <div class="about">
+        <h1 class="aboutHeader">About me</h1>
+        <p class="aboutDescription">I'm a student and I'm interested in web development. When away from my computer, my hobbies include swimming, cooking and fishing.</p>
+    </div>
     <script src="first.js"></script>
 </body>
 
