Created responsive "Skills" page, added status bar style for different browsers

--- a/first/first.html
+++ b/first/first.html
@@ -46,10 +46,10 @@
         </div>
     </header>
     <div class="home">
-        <img class="myPic" src="media/my-picture.jpg" alt="My Picture">
+        <img id="myPic" src="media/my-picture.jpg" alt="My Picture">
         <div class="homeText">
-            <h1 class="myName">Saleh Ghari</h1>
-            <h2 class="myProfession">Web Developer</h2>
+            <h1 id="myName">Saleh Ghari</h1>
+            <h2 id="myProfession">Web Developer</h2>
         </div>
     </div>
     <div class="about">
