Added 'Projects' page, created a slideshow for my projects
I have changed the background of 'Skills' and 'Projects' page to a awesome gradient!
The 'Projects' page is not responsive yet.

--- a/first/first.html
+++ b/first/first.html
@@ -24,16 +24,14 @@
             <a href="#About" class="navItems">About</a>
             <a href="#Skills" class="navItems">Skills</a>
             <a href="#Projects" class="navItems">Projects</a>
-            <a href="#Contact" class="navItems">Contact</a>
-            <a href="#Resume" class="navItems">Resume</a>
             <a href="https://github.com/salehghari" class="fab fa-github"></a>
             <a href="https://www.instagram.com/salehghari/" class="fab fa-instagram"></a>
             <a href="#" class="fab fa-youtube"></a>
             <label id="label" for="check">
                 <input type="checkbox" id="check"/> 
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="menuSpan"></span>
+                <span class="menuSpan"></span>
+                <span class="menuSpan"></span>
             </label>
         </nav>
         <div class="sideMenu">
@@ -41,8 +39,6 @@
             <a href="#About" class="sideMenuItems">About</a>
             <a href="#Skills" class="sideMenuItems">Skills</a>
             <a href="#Projects" class="sideMenuItems">Projects</a>
-            <a href="#Contact" class="sideMenuItems">Contact</a>
-            <a href="#Resume" class="sideMenuItems">Resume</a>
         </div>
     </header>
     <div class="home">
@@ -72,6 +68,38 @@
                 <li>BootStrap 5</li>
                 <li>I will learn React soon, too!</li>
             </ul>
+        </div>
+    </div>
+    <div class="projects">
+        <h2 class="projectsTitle">Projects</h2>
+        <div class="slideShow">
+            <div class="slides">
+                <div class="slide">
+                    <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">
+                    <a href="https://github.com/salehghari/weather_app">
+                        <p class="projectTitles">Weather app</p>
+                    </a>
+                </div>
+                <div class="slide">
+                    <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
+                    <a href="https://github.com/salehghari/login-page">
+                        <p class="projectTitles">Login page</p>
+                    </a>
+                </div>
+                <div class="slide">
+                    <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
+                    <a href="https://github.com/salehghari/Triangular-coordinates">
+                        <p class="projectTitles">Triangular coordinates</p>
+                    </a>
+                </div>
+                <span class="prev">&#10094</span>
+                <span class="next">&#10095</span>
+            </div>
+            <div class="points">
+                <span class="active"></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </div>
     <script src="first.js"></script>
