Created responsive 'Projects' page as a scroll snap

--- a/first/first.html
+++ b/first/first.html
@@ -76,19 +76,19 @@
             <div class="slides">
                 <div class="slide">
                     <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">
-                    <a href="https://github.com/salehghari/weather_app">
+                    <a class="linkSection" href="https://github.com/salehghari/weather_app">
                         <p class="projectTitles">Weather app</p>
                     </a>
                 </div>
                 <div class="slide">
                     <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
-                    <a href="https://github.com/salehghari/login-page">
+                    <a class="linkSection" href="https://github.com/salehghari/login-page">
                         <p class="projectTitles">Login page</p>
                     </a>
                 </div>
                 <div class="slide">
                     <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
-                    <a href="https://github.com/salehghari/Triangular-coordinates">
+                    <a class="linkSection" href="https://github.com/salehghari/Triangular-coordinates">
                         <p class="projectTitles">Triangular coordinates</p>
                     </a>
                 </div>
@@ -101,6 +101,27 @@
                 <span></span>
             </div>
         </div>
+        <div class="container x proximity-scroll-snapping" dir="ltr">
+            <div>
+                <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">  
+                <a class="linkSectionRes" href="https://github.com/salehghari/weather_app">
+                    <p class="projectTitlesRes">Weather app</p>
+                </a>
+            </div>
+            <div>
+                <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
+                <a class="linkSectionRes" href="https://github.com/salehghari/login-page">
+                    <p class="projectTitlesRes">Login page</p>
+                </a>
+            </div>
+            <div>
+                <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
+                <a class="linkSectionRes" href="https://github.com/salehghari/Triangular-coordinates">
+                    <p class="projectTitlesRes">Triangular coordinates</p>
+                </a>
+            </div>
+        </div>
+        <span class="swipeText">Swipe &#10132;</span>
     </div>
     <script src="first.js"></script>
 </body>
