Added typing effect of my name, added snowing effect
* I just copied and pasted the snow effect code.

--- a/my_website.html
+++ b/my_website.html
@@ -15,9 +15,19 @@
     <meta name="msapplication-navbutton-color" content="#305a95">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#305a95">
-    <title>First | GitHub Page</title>
+    <title>My Website | GitHub Page</title>
 </head>
 <body>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
     <header>
         <nav class="navbar">
             <a href="#Home" class="navItems">Home</a>
@@ -27,6 +37,7 @@
             <a href="https://github.com/salehghari" class="fab fa-github"></a>
             <a href="https://www.instagram.com/salehghari/" class="fab fa-instagram"></a>
             <a href="#" class="fab fa-youtube"></a>
+            <div class="snowCrystal"></div>
             <label id="label" for="check">
                 <input type="checkbox" id="check"/> 
                 <span class="menuSpan"></span>
@@ -44,8 +55,8 @@
     <div class="home">
         <img id="myPic" src="media/my-picture.jpg" alt="My Picture">
         <div class="homeText">
-            <h1 id="myName">Saleh Ghari</h1>
-            <h2 id="myProfession">Web Developer</h2>
+            <h1 id="myName"></h1>
+            <h2 id="myProfession"></h2>
         </div>
     </div>
     <div class="about">
@@ -101,7 +112,7 @@
                 <span></span>
             </div>
         </div>
-        <div class="container x proximity-scroll-snapping" dir="ltr">
+        <div class="container x" dir="ltr">
             <div>
                 <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">  
                 <a class="linkSectionRes" href="https://github.com/salehghari/weather_app">
@@ -123,7 +134,7 @@
         </div>
         <span class="swipeText">Swipe &#10132;</span>
     </div>
-    <script src="first.js"></script>
+    <script src="my_website.js"></script>
 </body>
 
 </html>
