Added navbar item click effect
Now if you click of each navbar item, it automatically scroll to its particular section!

--- a/my_website.html
+++ b/my_website.html
@@ -30,10 +30,10 @@
     <div class="snowflake">❄</div>
     <header>
         <nav class="navbar">
-            <a href="#Home" class="navItems">Home</a>
-            <a href="#About" class="navItems">About</a>
-            <a href="#Skills" class="navItems">Skills</a>
-            <a href="#Projects" class="navItems">Projects</a>
+            <a href="#home" class="navItems">Home</a>
+            <a href="#about" class="navItems">About</a>
+            <a href="#skills" class="navItems">Skills</a>
+            <a href="#projects" class="navItems">Projects</a>
             <a href="https://github.com/salehghari" class="fab fa-github"></a>
             <a href="https://www.instagram.com/salehghari/" class="fab fa-instagram"></a>
             <a href="#" class="fab fa-youtube"></a>
@@ -46,24 +46,24 @@
             </label>
         </nav>
         <div class="sideMenu">
-            <a href="#Home" class="sideMenuItems">Home</a>
-            <a href="#About" class="sideMenuItems">About</a>
-            <a href="#Skills" class="sideMenuItems">Skills</a>
-            <a href="#Projects" class="sideMenuItems">Projects</a>
+            <a href="#home" class="sideMenuItems">Home</a>
+            <a href="#about" class="sideMenuItems">About</a>
+            <a href="#skills" class="sideMenuItems">Skills</a>
+            <a href="#projects" class="sideMenuItems">Projects</a>
         </div>
     </header>
-    <div class="home">
+    <div id="home">
         <img id="myPic" src="media/my-picture.jpg" alt="My Picture">
         <div class="homeText">
             <h1 id="myName"></h1>
             <h2 id="myProfession"></h2>
         </div>
     </div>
-    <div class="about">
+    <div id="about">
         <h2 class="aboutHeader">About me</h2>
         <p class="aboutDescription">I'm a student and I'm interested in web development. When away from my computer, my hobbies include swimming, cooking and fishing.</p>
     </div>
-    <div class="skills">
+    <div id="skills">
         <h2 class="skillsTitle">Skills</h2>
         <div class="skillCards">
             <ul class="skillsList">
@@ -81,7 +81,7 @@
             </ul>
         </div>
     </div>
-    <div class="projects">
+    <div id="projects">
         <h2 class="projectsTitle">Projects</h2>
         <div class="slideShow">
             <div class="slides">
