Added each project as a link in website
Now if you click on each link of projects, you can try them that how they work!(instead of just checking GitHub repository)

--- a/my_website.html
+++ b/my_website.html
@@ -36,7 +36,7 @@
             <a href="#projects" class="navItems">Projects</a>
             <a href="https://github.com/salehghari" class="fab fa-github"></a>
             <a href="https://www.instagram.com/salehghari/" class="fab fa-instagram"></a>
-            <a href="#" class="fab fa-youtube"></a>
+            <a href="https://t.me/salehghari" class="fab fa-telegram"></a>
             <div class="snowCrystal"></div>
             <label id="label" for="check">
                 <input type="checkbox" id="check"/> 
@@ -87,19 +87,19 @@
             <div class="slides">
                 <div class="slide">
                     <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">
-                    <a class="linkSection" href="https://github.com/salehghari/weather_app">
+                    <a class="linkSection" href="projects/weather-app/weatherapp.html">
                         <p class="projectTitles">Weather app</p>
                     </a>
                 </div>
                 <div class="slide">
                     <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
-                    <a class="linkSection" href="https://github.com/salehghari/login-page">
+                    <a class="linkSection" href="projects/login-page/login.html">
                         <p class="projectTitles">Login page</p>
                     </a>
                 </div>
                 <div class="slide">
                     <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
-                    <a class="linkSection" href="https://github.com/salehghari/Triangular-coordinates">
+                    <a class="linkSection" href="projects/triangular-coordinates/TriangularCoordinates.html">
                         <p class="projectTitles">Triangular coordinates</p>
                     </a>
                 </div>
@@ -115,19 +115,19 @@
         <div class="container x" dir="ltr">
             <div>
                 <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">  
-                <a class="linkSectionRes" href="https://github.com/salehghari/weather_app">
+                <a class="linkSectionRes" href="projects/weather-app/weatherapp.html">
                     <p class="projectTitlesRes">Weather app</p>
                 </a>
             </div>
             <div>
                 <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
-                <a class="linkSectionRes" href="https://github.com/salehghari/login-page">
+                <a class="linkSectionRes" href="projects/login-page/login.html">
                     <p class="projectTitlesRes">Login page</p>
                 </a>
             </div>
             <div>
                 <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
-                <a class="linkSectionRes" href="https://github.com/salehghari/Triangular-coordinates">
+                <a class="linkSectionRes" href="projects/triangular-coordinates/TriangularCoordinates.html">
                     <p class="projectTitlesRes">Triangular coordinates</p>
                 </a>
             </div>
