--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
             <div class="slides">
                 <div class="slide">
                     <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">
-                    <a class="linkSection" href="projects/weather-app/weatherapp.html">
+                    <a class="linkSection" href="weather-app">
                         <p class="projectTitles">Weather app</p>
                     </a>
                 </div>
                 <div class="slide">
                     <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
-                    <a class="linkSection" href="projects/login-page/login.html">
+                    <a class="linkSection" href="login-page">
                         <p class="projectTitles">Login page</p>
                     </a>
                 </div>
                 <div class="slide">
                     <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
-                    <a class="linkSection" href="projects/triangular-coordinates/TriangularCoordinates.html">
+                    <a class="linkSection" href="triangular-coordinates">
                         <p class="projectTitles">Triangular coordinates</p>
                     </a>
                 </div>
