--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="weather-icons-master/css/weather-icons.min.css">
-    <title>Weather app | JS</title>
+    <title>Weather app</title>
 </head>
 <body>
     <div class="container">
