--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
             <div class="slides">
                 <div class="slide">
                     <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">
-                    <a class="linkSection" href="weather-app">
+                    <a class="linkSection" href="weather-app/">
                         <p class="projectTitles">Weather app</p>
                     </a>
                 </div>
                 <div class="slide">
                     <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
-                    <a class="linkSection" href="login-page">
+                    <a class="linkSection" href="login-page/">
                         <p class="projectTitles">Login page</p>
                     </a>
                 </div>
                 <div class="slide">
                     <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
-                    <a class="linkSection" href="triangular-coordinates">
+                    <a class="linkSection" href="triangular-coordinates/">
                         <p class="projectTitles">Triangular coordinates</p>
                     </a>
                 </div>
@@ -114,19 +114,19 @@
         <div class="container x" dir="ltr">
             <div>
                 <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">  
-                <a class="linkSectionRes" href="projects/weather-app/weatherapp.html">
+                <a class="linkSectionRes" href="weather-app/">
                     <p class="projectTitlesRes">Weather app</p>
                 </a>
             </div>
             <div>
                 <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
-                <a class="linkSectionRes" href="projects/login-page/login.html">
+                <a class="linkSectionRes" href="login-page/">
                     <p class="projectTitlesRes">Login page</p>
                 </a>
             </div>
             <div>
                 <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
-                <a class="linkSectionRes" href="projects/triangular-coordinates/TriangularCoordinates.html">
+                <a class="linkSectionRes" href="triangular-coordinates/">
                     <p class="projectTitlesRes">Triangular coordinates</p>
                 </a>
             </div>
