--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
                 <span class="menuSpan"></span>
                 <span class="menuSpan"></span>
                 <span class="menuSpan"></span>
-            </label>
+            </label>  
         </nav>
         <div class="sideMenu">
             <a href="#home" class="sideMenuItems">Home</a>
             <a href="#about" class="sideMenuItems">About</a>
             <a href="#skills" class="sideMenuItems">Skills</a>
             <a href="#projects" class="sideMenuItems">Projects</a>
+        </div>
+        <div class="progress-container">
+            <div class="progress-bar" id="myBar"></div>
         </div>
     </header>
     <div id="home">
