Added an animation by 'Animate.css' for login app, fixed bug

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -20,11 +20,11 @@
                 <p>This app works in such a way that by entering the titles of the province and city, it automatically gets the weather information of that province or city from the <a href="https://developers.parsijoo.ir">developers.parsijoo.ir</a> website and announces it in the shortest possible time.</p>
             </div>
             <div style="margin-top: 4vh;" class="threeDCard tools">
-                <h4>Tools :</h4>
+                <h3>Tools :</h3>
                 <ul>
-                    <li>'Parsijoo' website for extracting api data</li>
-                    <li>Using javascript to insert data</li>
-                    <li>Bootstrap for styling</li>
+                    <li><b>'Parsijoo'</b> website for extracting api data</li>
+                    <li>Using <b>javascript</b> to insert data</li>
+                    <li><b>Bootstrap</b> for styling</li>
                 </ul>
             </div>
             <hr>
