--- a/login-page/index.html
+++ b/login-page/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Login & Sign up Page</title>
 </head>
 <body style="background-color: #18181b;">
@@ -17,15 +18,21 @@
         </div>
     </div>
     <div class="center">
-        <div class="information mx-2 px-5 h-25 w-auto rounded text-center whiteText">
+        <div class="information mx-2 px-4 h-auto w-auto rounded text-center whiteText">
             <h1 class="mt-2">Sign up and Login page application</h1>
-            <p class="mt-4">In this project I tried to do everything needed for a Login and Signup page. I got the theme color of this project from <a href="https://Twitch.com">Twitch</a> website!</p>
+            <p class="mt-4">In this project I tried to do everything needed for a Login and Signup page. I got the theme color of this project from <a href="https://twitch.com">Twitch</a> website!</p>
+            <p class="text-left">Tools :</p>
+            <ul class="text-left">
+                <li>Using JavaScript <b>RegEx(regular expression)</b> for validate the email and password</li>
+                <li>Using <b>Animate.css</b></li>
+                <li><b>Bootstrap</b> for styling</li>
+            </ul>
         </div>
     </div>
     <div class="layout"></div>
     <div class="center">
         <!-- login form -->
-        <div class="logInForm coll-md-8 mx-2 mt-5">
+        <div class="logInForm coll-md-8 mx-2 mt-2">
             <button class="close">
                 <svg width="100%" height="100%" version="1.1" viewBox="0 0 20 20" x="0px" y="0px"><g><path d="M8.5 10L4 5.5 5.5 4 10 8.5 14.5 4 16 5.5 11.5 10l4.5 4.5-1.5 1.5-4.5-4.5L5.5 16 4 14.5 8.5 10z"></path></g></svg>
             </button>
@@ -55,7 +62,7 @@
             </form>
         </div>
         <!-- sign up form -->
-        <div class="signUpForm coll-md-8 mx-2 mt-5">
+        <div class="signUpForm coll-md-8 mx-2 mt-2">
             <button class="close">
                 <svg width="100%" height="100%" version="1.1" viewBox="0 0 20 20" x="0px" y="0px"><g><path d="M8.5 10L4 5.5 5.5 4 10 8.5 14.5 4 16 5.5 11.5 10l4.5 4.5-1.5 1.5-4.5-4.5L5.5 16 4 14.5 8.5 10z"></path></g></svg>
             </button>
