Added 'information section' in 'trigonometric functions' app, fixed bug
*The folder 'Triangle Coordinate' has been renamed to 'Trigonometric Functions'.

--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
                     </a>
                 </div>
                 <div class="slide">
-                    <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
+                    <img class="projectPictures" src="media/login-page-img.png" alt="Login and sign up page project picture">
                     <a class="linkSection" href="login-page/">
-                        <p class="projectTitles">Login page</p>
+                        <p class="projectTitles">Login and Sign up page</p>
                     </a>
                 </div>
                 <div class="slide">
-                    <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
-                    <a class="linkSection" href="triangular-coordinates/">
-                        <p class="projectTitles">Triangular coordinates</p>
+                    <img class="projectPictures" src="media/trigonometric-functions-img.png" alt="Trigonometric functions project picture">
+                    <a class="linkSection" href="trigonometric-functions/">
+                        <p class="projectTitles">Trigonometric functions</p>
                     </a>
                 </div>
                 <span class="prev">&#10094</span>
@@ -116,21 +116,21 @@
         </div>
         <div class="container x" dir="ltr">
             <div>
-                <img class="projectPictures" src="media/weather-app-img.png" alt="Weather app project picture">  
+                <img class="projectPicturesRes" src="media/weather-app-img.png" alt="Weather app project picture">  
                 <a class="linkSectionRes" href="weather-app/">
                     <p class="projectTitlesRes">Weather app</p>
                 </a>
             </div>
             <div>
-                <img class="projectPictures" src="media/login-page-img.png" alt="Login page project picture">
+                <img class="projectPicturesRes" src="media/login-page-img.png" alt="Login page project picture">
                 <a class="linkSectionRes" href="login-page/">
                     <p class="projectTitlesRes">Login page</p>
                 </a>
             </div>
             <div>
-                <img class="projectPictures" src="media/triangular-coordinates-img.png" alt="Triangular coordinates project picture">
-                <a class="linkSectionRes" href="triangular-coordinates/">
-                    <p class="projectTitlesRes">Triangular coordinates</p>
+                <img class="projectPicturesRes" src="media/trigonometric-functions-img.png" alt="Trigonometric functions project picture">
+                <a class="linkSectionRes" href="trigonometric-functions/">
+                    <p class="projectTitlesRes">Trigonometric functions</p>
                 </a>
             </div>
         </div>
