--- a/trigonometric-functions/index.html
+++ b/trigonometric-functions/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Triangular coordinates</title>
 </head>
 <body>
     <div class="bg">
         <div class="coordinates">
-            <canvas id="myCanvas" width="1920" height="1080" style="position: absolute;"></canvas>
+            <canvas id="myCanvas" style="position: absolute;"></canvas>
             <div class="x">
                 <div class="numbers-x ml-1">
                     <p>0<span style="position: absolute;">cm</span></p><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p><p>10</p><p>11</p><p>12</p><p>13</p><p>14</p><p>15</p><p>16</p><p>17</p><p>18</p><p>19</p><p>20</p><p>21</p><p>22</p><p>23</p><p>24</p><p>25</p><p>26</p><p>27</p><p>28</p><p>29</p><p>30</p><p>31</p><p>32</p><p>33</p><p>34</p><p>35</p><p>36</p>
@@ -24,10 +25,23 @@
             </div>
             <div class="result">
             </div>
+            <div class="circle">
+            </div>
+        </div>
+        <div class="infoIconSection">
+            <div class="informationIcon">
+            </div>
         </div>
     </div>
-    <div class="circle">
+    <div class="layout">
+        <div class="information">
+            <button class="close">
+                <svg width="100%" height="100%" version="1.1" viewBox="0 0 20 20" x="0px" y="0px"><g><path d="M8.5 10L4 5.5 5.5 4 10 8.5 14.5 4 16 5.5 11.5 10l4.5 4.5-1.5 1.5-4.5-4.5L5.5 16 4 14.5 8.5 10z"></path></g></svg>
+            </button>
+            <h1 style="margin-bottom: 5%;">trigonometric functions from 0 to 90 degrees</h1>
+            <p style="width: 50vw; font-size: 2.5vmin;">In this app, you can find any trigonometric function from 0 to 90 degrees with a click! As you can see there are some numbers at the top and the left of the screen that are approximately one centimeter apart. So if you click somewhere on the screen that is 2 cm long and 2 cm wide, the formed angle will be 45 degrees and sine, cosine, tangent and cotangent of 45 degrees will appear in the Result section.</p>
+        </div>
     </div>
-    <script src="TriangularCoordinates.js"></script>
+    <script src="trigonometricFunctions.js"></script>
 </body>
 </html>
